# StockHeatMap

./: Readme.md
Client/: netlify.toml  package-lock.json  package.json
Client/src/components/: HeatMap.tsx  MapFilter.tsx
Client/src/context/: StockContext.tsx
Server/: Readme.md  app.py  pyproject.toml
Server/api/: routes.py
Server/data/: processors.py  sources.py
Server/templates/: index.html
Server/utils/: cache.py  logging_config.py
src/: types.ts
src/app/: ClientBody.tsx  globals.css  layout.tsx  page.tsx
src/components/: Footer.tsx  HeatMap.tsx  MapFilter.tsx  Navbar.tsx  StockDetails.tsx  ToggleButton.tsx
src/context/: StockContext.tsx
src/sample/: sampleData.ts
src/services/: stockService.ts
