[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "api>=0.0.7",
    "apscheduler>=3.11.0",
    "data>=0.4",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "yfinance>=0.2.55",
    "flask-wtf>=1.2.2",
    "flask-cors>=5.0.1",
]
